--- a/Ziip/Ziip/Base.lproj/Main.storyboard
+++ b/Ziip/Ziip/Base.lproj/Main.storyboard
@@ -690,7 +690,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" id="1AY-om-HcD">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="50"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
@@ -1586,10 +1586,10 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="BEb-DR-460"/>
-        <segue reference="qk4-eU-Rmq"/>
-        <segue reference="YUE-xY-mHJ"/>
+        <segue reference="uQB-gf-e3C"/>
         <segue reference="lOv-0W-s0Z"/>
         <segue reference="Gtu-9M-Zb3"/>
         <segue reference="RWi-iM-9ba"/>
+        <segue reference="qk4-eU-Rmq"/>
     </inferredMetricsTieBreakers>
 </document>
